kubernetes/immich/ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      securityContext:
        fsGroup: 0
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: cache
              mountPath: /cache
          resources:
            requests:
              cpu: 150m
              memory: 768Mi
            limits:
              cpu: "600m"
              memory: 3Gi
      volumes:
        - name: cache
          emptyDir:
            sizeLimit: 5Gi
