kubernetes/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-database
  namespace: immich
  labels:
    app: immich-database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-database
  template:
    metadata:
      labels:
        app: immich-database
    spec:
      containers:
        - name: immich-postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          args:
            - -c
            - shared_preload_libraries=vchord
            - -c
            - max_connections=120
            - -c
            - shared_buffers=256MB
            - -c
            - effective_cache_size=1GB
            - -c
            - maintenance_work_mem=128MB
            - -c
            - random_page_cost=1.1
            - -c
            - effective_io_concurrency=200
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: immich-db-pvc
