kubernetes/immich/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-database
  namespace: immich
spec:
  selector:
    app: immich-database
  ports:
    - port: 5432
      targetPort: 5432
