kubernetes/immich/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
    - name: metrics
      port: 8081
      targetPort: metrics
